# googletest_examples

./: .gitignore  README.md
01/: hello.c  test1.cpp  test2.cpp
02/: go.sh  hello.c  hello.h  test1.cpp  test2.cpp
03/: Makefile
03/tests/: CMakeLists.txt  test1.cpp  test2.cpp
